<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#FFDFEAF1"
    android:soundEffectsEnabled="false">

    <TextView android:text="@string/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/title"
        android:textSize="20sp"
        android:layout_marginBottom="30dp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app1"
        android:id="@+id/bt1"
        android:layout_below="@+id/app1"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:textSize="13sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app2"
        android:id="@+id/bt2"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:textSize="13sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app3"
        android:id="@+id/bt3"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:textSize="13sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app4"
        android:id="@+id/bt4"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:textSize="13sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app5"
        android:id="@+id/bt5"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:textSize="13sp" />

    <Button
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/app6"
        android:id="@+id/bt6"
        android:layout_marginBottom="15dp"
        android:background="@drawable/button_background"
        android:layout_gravity="center_horizontal"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:elevation="10dp"
        android:elegantTextHeight="false"
        android:textSize="13sp" />

</LinearLayout>
